Upgrade to Java 17, with Openrewrite